--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
   },
   "homepage": "https://github.com/phumanong2311/serverNode#readme",
   "dependencies": {
-    "@mikro-orm/core": "^5.6.8",
-    "@mikro-orm/postgresql": "^5.6.8",
     "express": "^4.18.2",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.12"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
