--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start:dev": "nodemon dist/server.js"
+    "start:dev": "nodemon dist/server.js",
+    "start": "ts-node src/index.ts",
+    "typeorm": "typeorm-ts-node-commonjs"
   },
   "repository": {
     "type": "git",
@@ -22,8 +24,9 @@
   "dependencies": {
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
+    "typeorm": "^0.3.12",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.12"
+    "pg": "^8.4.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
