--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,16 @@
 {
-  "compilerOptions": {
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
-    "esModuleInterop": true,
-    "experimentalDecorators": true,
-    "target": "ES2020",
-    "sourceMap": true,
-    "outDir": "dist",
-    "emitDecoratorMetadata": true
-  },
-  "include": ["src/**/*"],
-  "lib": ["es2015"]
+   "compilerOptions": {
+      "lib": [
+         "es5",
+         "es6"
+      ],
+      "target": "es5",
+      "module": "NodeNext",
+      "moduleResolution": "nodenext",
+      "outDir": "dist",
+      "emitDecoratorMetadata": true,
+      "experimentalDecorators": true,
+      "sourceMap": true
+   },
+   "include": ["src/**/*"],
 }
