--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
   "dependencies": {
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
-    "typeorm": "^0.3.12",
+    "pg": "^8.4.0",
     "reflect-metadata": "^0.1.13",
-    "pg": "^8.4.0"
+    "typeorm": "^0.3.12"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
